--- a/package.json
+++ b/package.json
@@ -1,19 +1,43 @@
 {
   "name": "basquet-score-back",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon src/index.ts",
-    "dev": "nodemon src/index.ts"
+    "build": "tsc && tsc-alias",
+    "prod": "yarn db:migrate && node dist/server.js",
+    "dev": "yarn db:migrate && yarn db:generate && nodemon -q",
+    "lint": "eslint --fix && pretty-quick && prisma format",
+    "db:migrate": "prisma migrate deploy",
+    "db:make-migrations": "prisma migrate dev",
+    "db:generate": "prisma generate"
   },
   "dependencies": {
+    "@prisma/client": "4.13.0",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
+    "express": "^4.18.2",
+    "express-modulegen": "^0.1.3",
+    "http-status": "^1.6.2",
     "nodemon": "^2.0.22",
+    "prisma": "^4.13.0",
+    "signale": "^1.4.0",
+    "tsc-alias": "^1.8.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
+    "@types/signale": "^1.4.4",
     "ts-node": "^10.9.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rodrimarchese/basquet-score-back.git"
+  },
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/rodrimarchese/basquet-score-back/issues"
+  },
+  "homepage": "https://github.com/rodrimarchese/basquet-score-back#readme",
+  "description": ""
 }
