--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@prisma/client": "4.13.0",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "express-modulegen": "^0.1.3",
     "http-status": "^1.6.2",
     "nodemon": "^2.0.22",
