--- a/package.json
+++ b/package.json
@@ -10,27 +10,36 @@
     "lint": "eslint --fix && pretty-quick && prisma format",
     "db:migrate": "prisma migrate deploy",
     "db:make-migrations": "prisma migrate dev",
-    "db:generate": "prisma generate"
+    "db:generate": "prisma generate",
+    "migrate:postgres": "dotenv -e .env.test -- npx prisma migrate deploy"
   },
   "dependencies": {
     "@prisma/client": "4.13.0",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.1",
     "@types/node": "^18.15.11",
+    "@types/supertest": "^2.0.12",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-modulegen": "^0.1.3",
     "http-status": "^1.6.2",
+    "jest": "^29.5.0",
+    "jest-mock-extended": "^3.0.4",
     "nodemon": "^2.0.22",
     "prisma": "^4.13.0",
     "signale": "^1.4.0",
+    "supertest": "^6.3.3",
     "tsc-alias": "^1.8.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
+    "@jest/globals": "^29.5.0",
     "@types/signale": "^1.4.4",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1"
   },
   "repository": {
