--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,16 +7,19 @@ services:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=basket_db
     ports:
-      - '5432:5432'
+      - "5432:5432"
     volumes:
       - database:/var/lib/postgresql/data
 
-  server:
+  app:
     build:
       context: .
-      dockerfile: 'Dockerfile'
+      dockerfile: Dockerfile
+    volumes:
+      - .:/app
+      - /app/node_modules
     ports:
-      - '8080:8080'
+      - "8080:8080"
     depends_on:
       - database
     environment:
