--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@types/supertest": "^2.0.12",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
@@ -38,6 +40,8 @@
   },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.13",
     "@types/signale": "^1.4.4",
     "prisma": "^4.13.0",
     "ts-jest": "^29.1.0",
