--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,5 @@
 # Docker Compose Variables
-export POSTGRES_DB=test_db
+export POSTGRES_DB=basket_db
 export POSTGRES_USER=postgres
 export POSTGRES_PASSWORD=postgres
 
