no anda muy buen pero aca tienen

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "tsc && tsc-alias",
     "prod": "yarn db:migrate && node dist/server.js",
     "dev": "yarn db:migrate && yarn db:generate && nodemon -q",
+    "start": "ts-node ./src/router/index.ts",
     "lint": "eslint --fix && pretty-quick && prisma format",
     "db:migrate": "prisma migrate deploy",
     "db:make-migrations": "prisma migrate dev",
@@ -20,6 +21,7 @@
     "@types/jest": "^29.5.1",
     "@types/node": "^18.15.11",
     "@types/supertest": "^2.0.12",
+    "axios": "^1.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
@@ -31,7 +33,10 @@
     "http-status": "^1.6.2",
     "jest": "^29.5.0",
     "jest-mock-extended": "^3.0.4",
+    "node-fetch": "^3.3.1",
     "nodemon": "^2.0.22",
+    "redis": "^4.6.6",
+    "request": "^2.88.2",
     "signale": "^1.4.0",
     "supertest": "^6.3.3",
     "tsc-alias": "^1.8.2",
@@ -42,6 +47,7 @@
     "@jest/globals": "^29.5.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
+    "@types/request": "^2.48.8",
     "@types/signale": "^1.4.4",
     "prisma": "^4.13.0",
     "ts-jest": "^29.1.0",
