--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "target": "ES2022",
     "sourceMap": true,
+    "target": "es2020",
     "outDir": "./dist",
     "baseUrl": "./src",
     "rootDir": "./src",
@@ -24,13 +24,16 @@
       "@*": [
         "./*"
       ]
-    }
+    },
+    "resolveJsonModule": true
   },
   "lib": [
-    "es2022"
+    "dom", "es2020", "esnext.asynciterable"
   ],
   "include": [
-    "src/**/*"
+    "./src/**/*.ts",
+    "./src/**/*.tsx",
+    "config/*"
   ],
   "exclude": [
     "node_modules"
