--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,10 @@ services:
     environment:
       - DATABASE_URL=postgresql://postgres:postgres@database:5432/basket_db
 
+  external-api:
+    image: external-api-aseca-app:latest
+
+
 volumes:
   database:
     driver: local
