--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - "8080:8080"
     depends_on:
       - database
+      - external-api
     environment:
       - DATABASE_URL=postgresql://postgres:postgres@database:5432/basket_db
 
