Add configuration and run related information to load testing
- Add docker-compose.test.yml with test configuration

- Add `load-test` script to package.json

- Include `Load testing` section in README.md

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "db:make-migrations": "prisma migrate dev",
     "db:generate": "prisma generate",
     "migrate:postgres": "dotenv -e .env.test -- npx prisma migrate deploy",
-    "test": "jest --forceExit --detectOpenHandles"
+    "test": "jest --forceExit --detectOpenHandles",
+    "load-test": "locust -f test/load/locustfile.py"
   },
   "dependencies": {
     "@prisma/client": "4.13.0",
