--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "db:generate": "prisma generate",
     "migrate:postgres": "dotenv -e .env.test -- npx prisma migrate deploy",
     "test": "jest --forceExit --detectOpenHandles",
+    "test:int": "jest --coverage --verbose test/integration",
     "load-test": "locust -f test/load/locustfile.py"
   },
   "dependencies": {
