--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,3 +23,17 @@ jobs:
 
       - name: Run tests
         run: npm run test:int
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Build and push Docker image
+        if: ${{ success() }}
+        env:
+          DOCKERHUB_REPOSITORY: nachoferra/aseca
+        run: |
+          docker build -t $DOCKERHUB_REPOSITORY .
+          docker push $DOCKERHUB_REPOSITORY
