--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,12 +23,13 @@ jobs:
 
       - name: Run tests
         run: npm run test:int
+  publish:
+    runs-on: ubuntu-latest
+    uses: Nachoferra1894/ingsis-actions/.github/workflows/docker-image.yml@main
+    with:
+      image-name: nachoferra/aseca
+      image-version: 0.0.1
 
-      - name: Call Docker Image action
-        uses: Nachoferra1894/ingsis-actions/.github/workflows/docker-image.yml@main
-        with:
-          image-name: nachoferra/aseca
-          image-version: 0.0.1
 
 #      - name: Login to Docker Hub
 #        uses: docker/login-action@v1
