--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,22 +24,16 @@ jobs:
       - name: Run tests
         run: npm run test:int
 
-  docker:
-    uses: Nachoferra1894/ingsis-actions/.github/workflows/docker-image.yml@main
-    with:
-      image-name: nachoferra/aseca
-      image-version: 1.0.1
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-#      - name: Login to Docker Hub
-#        uses: docker/login-action@v1
-#        with:
-#          username: ${{ secrets.DOCKERHUB_USERNAME }}
-#          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-#
-#      - name: Build and push Docker image
-#        if: ${{ success() }}
-#        env:
-#          DOCKERHUB_REPOSITORY: nachoferra/aseca
-#        run: |
-#          docker build -t $DOCKERHUB_REPOSITORY .
-#          docker push $DOCKERHUB_REPOSITORY
+      - name: Build and push Docker image
+        if: ${{ success() }}
+        env:
+          DOCKERHUB_REPOSITORY: nachoferra/aseca
+        run: |
+          docker build -t $DOCKERHUB_REPOSITORY .
+          docker push $DOCKERHUB_REPOSITORY
